@@ -180,7 +180,6 @@ export(topfeatures)
 export(trim)
 export(trimdfm)
 export(weight)
-export(weighting)
 export(wordstem)
 exportClasses(corpusSource)
 exportClasses(dfm)
